test/corpus/ident.txt
==========
Instruction with identifier
==========
ifu myconst
---
(program
    (instruction
        (name)
        (ident)))


===============
Identifier with mask
===============
ifu myconst.xyzw
---
(program
    (instruction
        (name)
        (ident)
        (accspec)))
